Vanilla To Do List

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,12 @@
 </head>
 
 <body>
-  <button id="add">Add</button>
-  <span></span>
-  <button id="minus">Minus</button>
+  <h1>To Do List</h1>
+  <form>
+    <input type="text" id="inputContent" placeholder="Write to do :)">
+    <button id="add">Add</button>
+  </form>
+  <ul></ul>
 </body>
 
 </html>
